<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class ServiceUnit extends Model
{
    use HasFactory;

    protected $fillable = [
        'name',
    ];

    public function Services()
    {
        return $this->hasMany(Service::class);
    }
}
