@startuml Database
  entity Reservation {
    * id
    __
    * reservation_time
    * reservation_number
    * checkin
    * checkout
    discount
    * user_id
    * guest_id
    * reservation_status_id
  }

  entity Payment {
    * id
    __
    * total
    * reservation_id
  }

  entity ReservationStatus {
    * id
    __
    * name
  }

  entity RoomOrder {
    * id
    __
    * order_time
    * price
    * guest_count
    * reservation_id
    * room_id
  }

  entity ServiceOrder {
    * id
    __
    * order_time
    * price
    * quantity
    * reservation_id
    * service_id
  }

  entity Service {
    * id
    __
    * name
    * price
    * service_unit_id
  }

  entity ServiceUnit {
    * id
    __
    * name
  }

    entity RestaurantOrder {
    * id
    __
    * order_time
    * price
    * quantity
    * reservation_id
    * restaurant_id
  }

  entity Restaurant {
    * id
    __
    * name
    * price
    * unit
  }

  entity Guest {
    * id
    __
    * nik
    * name
    * phone
    email
  }

  entity User {
    * id
    __
    * name
    * phone
    * email
    * address
    * status
    * gender
    * password
    * role_id
  }

  entity Role {
    * id
    __
    * name
  }

  entity Gender {
    * id
    __
    * gender
  }

  entity RoomFacility {
    * id
    __
    * room_type_id
    * facility_id
  }

  entity Room {
    * id
    __
    * room_number
    * room_type_id
  }

  entity RoomType {
    * id
    __
    * name
    * number_of_guest
  }

  entity RoomPrice {
    * id
    __
    * description
    * price
    * room_type_id
  }

  entity Facility {
    * id
    __
    * name
  }

  entity Thumbnail {
    * id
    __
    * file_name
    * room_type_id
  }

  entity Contact {
    * id
    __
    * email
    * call_center
    * whatshapp
    * address
  }

  entity Copyright {
    * id
    __
    * text
  }

  entity Policy {
    * id
    __
    * text
  }

  entity privacy {
    * id
    __
    * text
  }

  Reservation ||--|{ ReservationStatus
  Reservation }|--|| RestaurantOrder
  Reservation }|--|| ServiceOrder
  Reservation ||--|{ User
  Reservation ||--|{ Guest
  Reservation }|--|| RoomOrder
  Reservation }|--|{ Payment
  RoomOrder ||--|{ Room
  Room ||--|{ RoomType
  RoomType }|--|| RoomPrice
  RoomType }|--|| RoomFacility
  RoomType }|--|| Thumbnail
  RoomFacility ||--|{ Facility
  ServiceOrder ||--|{ Service
  Service ||--|{ ServiceUnit
  RestaurantOrder ||--|{ Restaurant
  User ||--|{ Role
  User ||--|{ Gender

@enduml
